--- a/templates/default/list_supermasters.html
+++ b/templates/default/list_supermasters.html
@@ -31,10 +31,10 @@
                         <td>{{ server['account'] }}</td>
                         {% if perm_sm_edit %}
                         <td class="text-end">
-                            <a class="btn btn-outline-primary btn-sm me-2" href="index.php?page=edit_supermaster&master_ip={{ server['master_ip'] }}&ns_name={{ server['ns_name'] }}">
+                            <a class="btn btn-outline-primary btn-sm me-2" href="/supermasters/edit?master_ip={{ server['master_ip'] }}&ns_name={{ server['ns_name'] }}">
                                 <i class="bi bi-pencil-square text-primary me-1"></i><span class="text-primary">{% trans %}Edit{% endtrans %}</span>
                             </a>
-                            <a class="btn btn-outline-danger btn-sm" href="index.php?page=delete_supermaster&master_ip={{ server['master_ip'] }}&ns_name={{ server['ns_name'] }}">
+                            <a class="btn btn-outline-danger btn-sm" href="/supermasters/delete?master_ip={{ server['master_ip'] }}&ns_name={{ server['ns_name'] }}">
                                 <i class="bi bi-trash text-danger me-1"></i><span class="text-danger">{% trans %}Delete{% endtrans %}</span>
                             </a>
                         </td>
