--- a/templates/default/list_zone_templ.html
+++ b/templates/default/list_zone_templ.html
@@ -94,7 +94,7 @@
                     <td class="text-end">
                         <div class="gap-2">
                             <a class="btn btn-sm btn-outline-secondary {% if template['zones_linked'] == '0' %}disabled{% endif %}"
-                               href="{% if template['zones_linked'] != '0' %}index.php?page=list_template_zones&id={{ template['id'] }}{% else %}#{% endif %}"
+                               href="{% if template['zones_linked'] != '0' %}/zones/templates/{{ template['id'] }}/zones{% else %}#{% endif %}"
                                data-bs-toggle="tooltip"
                                data-bs-placement="top"
                                title="{% if template['zones_linked'] == '0' %}{% trans %}No zones are using this template{% endtrans %}{% else %}{% trans %}View zones using this template{% endtrans %}{% endif %}"
