--- a/templates/modern/delete_supermaster.html
+++ b/templates/modern/delete_supermaster.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="mt-4">
-            <a href="index.php?page=delete_supermaster&master_ip={{ master_ip }}&ns_name={{ info['ns_name'] }}&confirm=1" class="btn btn-danger btn-sm">
+            <a href="/supermasters/delete?master_ip={{ master_ip }}&ns_name={{ info['ns_name'] }}&confirm=1" class="btn btn-danger btn-sm">
                 <i class="bi bi-trash-fill me-1 text-white"></i>{% trans %}Yes, delete this supermaster{% endtrans %}
             </a>
             <a href="/supermasters" class="btn btn-secondary btn-sm">
