fix: correct password reset URL routing and navigation links

--- a/templates/default/forgot_password.html
+++ b/templates/default/forgot_password.html
@@ -20,7 +20,7 @@
                         
                         <p>{% trans %}Enter your email address and we'll send you a link to reset your password.{% endtrans %}</p>
                         
-                        <form class="needs-validation" method="post" action="/password/reset" novalidate>
+                        <form class="needs-validation" method="post" action="/password/forgot" novalidate>
                             <input type="hidden" name="password_reset_token" value="{{ password_reset_token }}">
                             
                             <div class="mb-3">
