--- a/templates/default/login.html
+++ b/templates/default/login.html
@@ -65,7 +65,7 @@
             {% endif %}
             {% if password_reset_enabled %}
             <div class="text-center mt-3">
-                <a href="/password/reset" class="text-decoration-none">{% trans %}Forgot your password?{% endtrans %}</a>
+                <a href="/password/forgot" class="text-decoration-none">{% trans %}Forgot your password?{% endtrans %}</a>
             </div>
             {% endif %}
             {% if recaptcha_enabled %}
