--- a/templates/modern/reset_password.html
+++ b/templates/modern/reset_password.html
@@ -16,7 +16,7 @@
                 {{ error|trans }}
             </div>
             <div class="d-grid">
-                <a href="/password/reset" class="btn btn-secondary">{% trans %}Request New Reset Link{% endtrans %}</a>
+                <a href="/password/forgot" class="btn btn-secondary">{% trans %}Request New Reset Link{% endtrans %}</a>
             </div>
         {% else %}
             {% if error %}
