--- a/templates/modern/reset_password.html
+++ b/templates/modern/reset_password.html
@@ -38,7 +38,7 @@
             
             <p>{% trans %}Enter your new password for{% endtrans %} <strong>{{ email }}</strong></p>
             
-            <form class="needs-validation" method="post" action="/auth/reset-password/{{ token }}" novalidate>
+            <form class="needs-validation" method="post" action="/password/reset?token={{ token }}" novalidate>
                 <input type="hidden" name="reset_password_token" value="{{ reset_password_token }}">
                 
                 <div class="mb-3">
