--- a/templates/modern/dnssec.html
+++ b/templates/modern/dnssec.html
@@ -61,7 +61,7 @@
             <a href="/zones/{{ zone_id }}/dnssec/keys/add" class="btn btn-primary btn-sm">
                 <i class="bi bi-plus-circle text-white me-1"></i>{% trans %}Add new key{% endtrans %}
             </a>
-            <a href="/zones/{{ zone_id }}/dnssec/ds" class="btn btn-secondary btn-sm">
+            <a href="/zones/{{ zone_id }}/dnssec/ds-dnskey" class="btn btn-secondary btn-sm">
                 <i class="bi bi-key text-white me-1"></i>{% trans %}Show DS and DNSKEY{% endtrans %}
             </a>
             {% if perm_edit != "none" %}
