--- a/templates/modern/footer.html
+++ b/templates/modern/footer.html
@@ -1,4 +1,5 @@
 </main>
+{% if custom_footer or not user_logged_in %}
 <footer class="footer py-3">
     <div class="container">
         <div class="d-flex justify-content-between align-items-center">
@@ -26,6 +27,7 @@
         </div>
     </div>
 </footer>
+{% endif %}
 
 
 {% if db_queries %}
