--- a/templates/modern/edit.html
+++ b/templates/modern/edit.html
@@ -333,7 +333,7 @@
                         </th>
                         {% if iface_edit_show_id %}
                         <th>
-                            <a href="/zones/{{ zone_id }}/edit&record_sort_by=id&sort_direction={{ record_sort_by == 'id' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                            <a href="/zones/{{ zone_id }}/edit?record_sort_by=id&sort_direction={{ record_sort_by == 'id' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
                                 {% trans %}Id{% endtrans %}
                             </a>
                             {% if record_sort_by == 'id' %}
@@ -342,7 +342,7 @@
                         </th>
                         {% endif %}
                         <th>
-                            <a href="/zones/{{ zone_id }}/edit&record_sort_by=name&sort_direction={{ record_sort_by == 'name' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                            <a href="/zones/{{ zone_id }}/edit?record_sort_by=name&sort_direction={{ record_sort_by == 'name' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
                                 {% trans %}Name{% endtrans %}
                             </a>
                             {% if record_sort_by == 'name' %}
@@ -350,7 +350,7 @@
                             {% endif %}
                         </th>
                         <th>
-                            <a href="/zones/{{ zone_id }}/edit&record_sort_by=type&sort_direction={{ record_sort_by == 'type' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                            <a href="/zones/{{ zone_id }}/edit?record_sort_by=type&sort_direction={{ record_sort_by == 'type' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
                                 {% trans %}Type{% endtrans %}
                             </a>
                             {% if record_sort_by == 'type' %}
@@ -358,7 +358,7 @@
                             {% endif %}
                         </th>
                         <th>
-                            <a href="/zones/{{ zone_id }}/edit&record_sort_by=content&sort_direction={{ record_sort_by == 'content' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                            <a href="/zones/{{ zone_id }}/edit?record_sort_by=content&sort_direction={{ record_sort_by == 'content' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
                                 {% trans %}Content{% endtrans %}
                             </a>
                             {% if record_sort_by == 'content' %}
@@ -366,7 +366,7 @@
                             {% endif %}
                         </th>
                         <th>
-                            <a href="/zones/{{ zone_id }}/edit&record_sort_by=prio&sort_direction={{ record_sort_by == 'prio' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                            <a href="/zones/{{ zone_id }}/edit?record_sort_by=prio&sort_direction={{ record_sort_by == 'prio' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
                                 {% trans %}Priority{% endtrans %}
                             </a>
                             {% if record_sort_by == 'prio' %}
@@ -374,7 +374,7 @@
                             {% endif %}
                         </th>
                         <th>
-                            <a href="/zones/{{ zone_id }}/edit&record_sort_by=ttl&sort_direction={{ record_sort_by == 'ttl' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                            <a href="/zones/{{ zone_id }}/edit?record_sort_by=ttl&sort_direction={{ record_sort_by == 'ttl' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
                                 {% trans %}TTL{% endtrans %}
                             </a>
                             {% if record_sort_by == 'ttl' %}
@@ -385,7 +385,7 @@
                         <th>{% trans %}Comment{% endtrans %}</th>
                         {% endif %}
                         <th>
-                            <a href="/zones/{{ zone_id }}/edit&record_sort_by=disabled&sort_direction={{ record_sort_by == 'disabled' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                            <a href="/zones/{{ zone_id }}/edit?record_sort_by=disabled&sort_direction={{ record_sort_by == 'disabled' and sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
                                 {% trans %}Disabled{% endtrans %}
                             </a>
                             {% if record_sort_by == 'disabled' %}
