--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -186,11 +186,11 @@
                 <i class="bi bi-arrow-counterclockwise me-1 text-white"></i>{% trans %}Reset{% endtrans %}
             </button>
             {% endif %}
-            <a href="/zones/{{ zone_id }}/edit&export_csv=1" class="btn btn-secondary btn-sm">
+            <a href="/zones/{{ zone_id }}/edit?export_csv=1" class="btn btn-secondary btn-sm">
                 <i class="bi bi-file-earmark-spreadsheet me-1 text-white"></i>{% trans %}CSV{% endtrans %}
             </a>
             {% if not is_reverse_zone and perm_edit != "none" %}
-            <a href="/zones/batch-ptr&id={{ zone_id }}" class="btn btn-secondary btn-sm">
+            <a href="/zones/batch-ptr?id={{ zone_id }}" class="btn btn-secondary btn-sm">
                 <i class="bi bi-arrow-repeat me-1 text-white"></i>{% trans %}PTR{% endtrans %}
             </a>
             {% endif %}
