--- a/templates/modern/list_forward_zones.html
+++ b/templates/modern/list_forward_zones.html
@@ -168,7 +168,7 @@
                                 </a>
                                 {% endif %}
                                 {% if perm_zone_master_add %}
-                                <a class="btn btn-outline-secondary btn-sm" href="/zones/batch-ptr&id={{ zone['id'] }}">
+                                <a class="btn btn-outline-secondary btn-sm" href="/zones/batch-ptr?id={{ zone['id'] }}">
                                     <i class="bi bi-arrow-repeat text-secondary"></i>
                                     <span class="d-none d-md-inline">{% trans %}PTR{% endtrans %}</span>
                                 </a>
