--- a/templates/default/list_log_zones.html
+++ b/templates/default/list_log_zones.html
@@ -17,8 +17,7 @@
         <strong><i class="bi bi-list-ul me-2"></i>{% trans %}Zone Change Logs{% endtrans %}</strong>
     </div>
     <div class="card-body">
-        <form method="GET">
-            <input type="hidden" name="page" value="list_log_zones">
+        <form method="GET" action="/zones/logs">
             <div class="row mb-4">
                 <div class="col-md-6">
                     <div class="input-group">
